# whisper

./: Cargo.toml  dprint.json
.github/workflows/: release.yaml
contrib/: bemenu.sh
src/: main.rs
