[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
color-eyre = "0.6.1"
gio = "0.15.11"
libsecret = { version = "0.1.4", features = ["v0_20"] }
